--- a/try.html
+++ b/try.html
@@ -8,6 +8,12 @@
 	margin: auto;
 	text-align:center;
 	}
+	
+	h1 {
+	font-size: 24px !important;
+	display: inline-block !important;
+	}
+
 </style>	
 	
 </head>
