--- a/try.html
+++ b/try.html
@@ -21,7 +21,7 @@
 <body>
 
 <center>
-	<h1>Roman Numerals to Arabic Numbers</h1>
+	<b>Roman Numerals to Arabic Numbers</b>
 	<p>Hello World</p>
 </center>
 
