--- a/try.html
+++ b/try.html
@@ -9,17 +9,16 @@
 	text-align:center;
 	}
 	
-	h1 {
+	h1{
 	font-size: 24px !important;
 	display: inline-block !important;
 	}
 
-</style>	
-	
+</style>		
 </head>
 
 <body>
-
+<b>HELLOI</b>
 <center>
 	<b>Roman Numerals to Arabic Numbers</b>
 	<p>Hello World</p>
